added more routing

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -6,5 +6,6 @@
       >name:
       <input [(ngModel)]="hero.name" placeholder="name" />
     </label>
+    <button (click)="goBack()">go back</button>
   </div>
 </div>
